# chanel

./: 404.html  README.md  index.html  mkdocs.yml  mlc_config.json  output.txt  pyproject.toml  requirements.txt  shanmugan.wav.txt  sitemap.xml
.devcontainer/: devcontainer.json
.devcontainer/node/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: bump-deps.yml  deploy.yaml  link-check.yaml  test.yaml
blog/: 2023-11-19-vscode-on-samsung  index.html
docs/: index.md  robots.txt  story.md  trading-bot-core.md  trading-bot.md
docs/posts/: 2022-04-09-lazarus-camping.md  2022-05-france-nice-hiking.md  2022-05-ireland-hiking.md  2022-08-22-vietnam.md  2022-09-15-bintan.md  2022-12-28-shanmugan-transcript.md  2023-02-06-sweet-potatoes.md  2023-02-19-teas.md  2023-05-14 Cooking class.md  trading-bot.md  zoom-meetings.md
docs/stories/: story.md
docs/trading/: 2023-05-07-trading-bot.md  2023-07-21-CHFJPY-CFD.md
docs/trading-bot/: index.md  monitoring.md
docs/trips/: 2022-04-09-lazarus-camping.md  2022-05-france-nice-hiking.md  2022-08-22-vietnam.md  2022-09-15-bintan.md  2023-04-07-japan-hiking.md  temp.md
posts/2022-04-09-lazarus-camping/: index.html
posts/2022-05-france-nice-hiking/: index.html
posts/2022-05-ireland-hiking/: index.html
posts/2022-08-22-vietnam/: index.html
posts/2022-09-15-bintan/: index.html
posts/2022-12-28-shanmugan-transcript/: index.html
posts/2023-02-06-sweet-potatoes/: index.html
search/: search_index.json
story/: index.html
trading-bot/: index.html
trading-bot-core/: index.html
(+163 files in other folders)
