[project]
name = "chanel"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "", email = ""},
]
dependencies = [
    "mkdocs-material>=9.5.26",
    "mkdocs-glightbox>=0.4.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
start = "mkdocs serve"
build = "mkdocs build"